Make it more automatic and build friendly